test/deployer/testdata/agentgateway-omitdefaultsecuritycontext-ref-gwp-on-gw-gwp.yaml
apiVersion: gateway.kgateway.dev/v1alpha1
kind: GatewayParameters
metadata:
  name: gw-params-omit
  namespace: default
spec:
  kube:
    omitDefaultSecurityContext: true
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: agentgateway
spec:
  controllerName: kgateway.dev/agentgateway
  description: Specialized class for agentgateway.
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: gw
  namespace: default
spec:
  infrastructure:
    parametersRef:
      group: gateway.kgateway.dev
      kind: GatewayParameters
      name: gw-params-omit
  gatewayClassName: agentgateway
  listeners:
    - protocol: HTTP
      port: 8080
      name: http
      allowedRoutes:
        namespaces:
          from: Same
